Fix header style on tablets

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -6,123 +6,9 @@
     flex-direction: column;
   }
 }
-.gatsby-highlight {
-  margin-bottom: 1.75rem;
-}
-blockquote {
-  border-left: 0.32813rem solid #e535ab;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 400;
-}
-:not(pre) > code[class*='language-'] {
-  background-color: white;
-  color: #e535ab;
-}
-a > code[class*='language-'] {
-  color: #007acc;
-}
-/* Prisma color scheme based on graphql.org css */
-.gatsby-highlight pre {
-  padding: 7px 14px;
-  margin: 1em -4px;
-  overflow: auto;
-  position: relative;
-  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.08),
-    inset 0 -1px 0 rgba(0, 0, 0, 0.08), inset -1px 0 0 rgba(0, 0, 0, 0.08),
-    inset 4px 0 0 rgba(0, 0, 0, 0.08);
-  border-radius: 3px;
-}
-.gatsby-highlight {
-  font-family: 'Roboto Mono', Menlo, Monaco, monospace;
-  font-weight: 400;
-  color: #202020;
-  font-size: 13px;
-  line-height: 17px;
-  direction: ltr;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  -moz-tab-size: 2;
-  -o-tab-size: 2;
-  tab-size: 2;
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
-  position: relative;
-}
-/* Comment */
-.gatsby-highlight .comment,
-.cm-comment {
-  color: #999;
-}
-/* Punctuation */
-.gatsby-highlight .punctuation,
-.cm-punctuation {
-  color: #555;
-}
-/* Keyword */
-.gatsby-highlight .keyword,
-.cm-keyword {
-  color: #b11a04;
-}
-/* OperationName, FragmentName */
-.gatsby-highlight .constant,
-.cm-def {
-  color: #d2054e;
-}
-/* FieldName */
-.gatsby-highlight .attr-name,
-.cm-property {
-  color: #1f61a0;
-}
-/* FieldAlias */
-.cm-qualifier {
-  color: #1c92a9;
-}
-/* ArgumentName and ObjectFieldName */
-.cm-attribute {
-  color: #8b2bb9;
-}
-/* Number */
-.gatsby-highlight .number,
-.cm-number {
-  color: #2882f9;
-}
-/* String */
-.gatsby-highlight .string,
-.cm-string {
-  color: #d64292;
-}
-/* Boolean */
-.gatsby-highlight .boolean,
-.cm-builtin {
-  color: #d47509;
-}
-/* EnumValue */
-.gatsby-highlight .enum,
-.cm-string-2 {
-  color: #0b7fc7;
-}
-/* Variable */
-.gatsby-highlight .variable,
-.cm-variable {
-  color: #397d13;
-}
-/* Directive */
-.gatsby-highlight .function,
-.cm-meta {
-  color: #b33086;
-}
-/* Type */
-.gatsby-highlight .type-name,
-.cm-atom {
-  color: #ca9800;
+.graphql-college {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
 }
